--- a/yandex_46c7f41d0e3b2305.html
+++ b/yandex_46c7f41d0e3b2305.html
@@ -2,5 +2,5 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-    <body>Verification: 46c7f41d0e3b2305</body><b></b>
+    <body>Verification: 46c7f41d0e3b2305</body>
 </html>
